updated the Hero Section

--- a/index.html
+++ b/index.html
@@ -3,19 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ACK St Philip's Kihingo Church - Welcome Home</title>
-    <meta name="description" content="Join Kiambu ACK Church - A welcoming community of faith in Kenya. Experience live worship, spiritual growth, and Christian fellowship. Sunday services at 9:00 AM and 11:30 AM." />
-    <meta name="author" content="Kiambu ACK Church" />
-    <meta name="keywords" content="church, Kiambu, ACK, worship, Christian, Kenya, faith, community, live stream, Sunday service" />
+    <title>Parra & Harris Law - Expert Family Law Attorneys</title>
+    <meta name="description" content="Professional family law attorneys specializing in co-parenting plans, divorce, and child custody. Court-ready legal solutions with compassion and expertise." />
+    <meta name="author" content="Parra & Harris Law Firm" />
+    <meta name="keywords" content="family law attorney, co-parenting plans, divorce lawyer, child custody, legal services, court documents, parenting agreements" />
 
-    <meta property="og:title" content="Kiambu ACK Church - Welcome Home" />
-    <meta property="og:description" content="Join our welcoming church community in Kiambu, Kenya. Experience meaningful worship and grow in faith together." />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Parra & Harris Law - Expert Family Law Attorneys" />
+    <meta property="og:description" content="Professional family law attorneys specializing in co-parenting plans, divorce, and child custody. Court-ready legal solutions with compassion and expertise." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/assets/og-image.jpg" />
+    <meta property="og:url" content="https://parraharrislaw.com" />
 
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Duka Track" />
-    <meta name="twitter:image" content="" />
+    <meta name="twitter:title" content="Parra & Harris Law - Expert Family Law Attorneys" />
+    <meta name="twitter:description" content="Professional family law attorneys specializing in co-parenting plans, divorce, and child custody." />
+    <meta name="twitter:image" content="/assets/twitter-image.jpg" />
+    <meta name="twitter:site" content="@ParraHarrisLaw" />
+
+    <!-- Additional Legal-Specific Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#1e40af" />
+    <meta name="format-detection" content="telephone=no" />
+
+    <!-- Structured Data for Local Business -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LegalService",
+      "name": "Parra & Harris Law Firm",
+      "description": "Family law attorneys specializing in co-parenting plans and divorce cases",
+      "url": "https://parraharrislaw.com",
+      "telephone": "+1-XXX-XXX-XXXX",
+      "areaServed": "Florida, USA",
+      "serviceType": "Legal Services",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Jacksonville",
+        "addressRegion": "FL"
+      }
+    }
+    </script>
   </head>
 
   <body>
